--- a/resources/config/ci-config.yml
+++ b/resources/config/ci-config.yml
@@ -7,10 +7,10 @@ repos:
     name: "mcsdk-automation-framework-node"
   core:
     name: "mcsdk-automation-framework-core"
-    owner: "sfadincescu"
+    owner: "salesforce-marketingcloud"
     swagger_cli: "{%repos_core_dir%}/bin/swagger-codegen-cli.jar"
     swagger_spec: "{%repos_core_dir%}/resources/sfmc-openapi-v2.json"
   sdk:
     name: "mcsdk-automation-node"
-    owner: "sfadincescu"
+    owner: "salesforce-marketingcloud"
     apiFolderPath: "src/Api"
